Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61749

Unable to handle unregistered datatype 'const QQuickPointerDevice*' for property 'QQuickPointerEvent::device'

XMLWordPrintable

    • 0e38ce39cd63318f2a10239239b173f17725eecf 1d815780e020a7315dfc4762b6b0280834203e7e b8fd580cb3453b3850c36765c4b2537538d2f4f8

      After upgrading of Qt from 5.9.0 to 5.9.1, I always got following importunate debugginng message:

      QMetaProperty::read: Unable to handle unregistered datatype 'const QQuickPointerDevice*' for property 'QQuickPointerEvent::device'

      these messages can be much count in process of lifetime of an application, they appear every time when e.g. any Item is loaded through Loader.

      I have attached a simple example project.

      PS: this happens only if I try to run the application via "Start Debugging" button from QtC. 

        1. qtbug61749.zip
          1 kB
          Denis Shienkov
        For Gerrit Dashboard: QTBUG-61749
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            kuzulis Denis Shienkov
            Votes:
            17 Vote for this issue
            Watchers:
            25 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes